Pagination design : fixing button sizes + font-weight and footer alignment

--- a/02-pagination/style.css
+++ b/02-pagination/style.css
@@ -1,2 +1,7 @@
+footer { height: 8rem;
+}
 
+.btn{
+    width: 6rem;
+}
 
